Change example config to use a real token path
This will make building the Arch Linux package a bit easier

--- a/ammatrix.example.yml
+++ b/ammatrix.example.yml
@@ -1,6 +1,6 @@
 homeserver_url: "https://matrix.org"
 matrix_http_config:
-  bearer_token_file: /path/to/access_token
+  bearer_token_file: /var/lib/alertmanager-matrix/access_token
 text: |-
   {{ range $a := .Alerts -}}
   {{ if eq $a.Status "firing" }}🚨{{ else }}✅{{ end }} {{ index $a.Annotations "summary" }}
